samples/_failures_safe/1761557243_c80acb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e014e406.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_e014e406.c:159:25: error: missing terminating " character
  159 |         fprintf(stderr, "Invalid operation parameters\n
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e014e406.c:159:9: error: expected expression at end of input
  159 |         fprintf(stderr, "Invalid operation parameters\n
      |         ^~~~~~~
./samples/SAFE/__tmp_e014e406.c:159:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e014e406.c:159:9: error: expected declaration or statement at end of input
